--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: April 17, 2024 --><html lang="en-us" >
+<!-- Last Published: April 18, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -873,7 +873,7 @@
 
     
     <div class="article-style">
-      <p style="text-align: justify;">Dr. Hong Liu research interest focuses on the mesoscopic behavior of the reactive polymer systems. Dr. Liu had developed a coarse-grained simulation strategy coupled with the polymerization reaction model, which had been applied by others including international renowned scholars for many times. His work has established the multi-scale theoretical and simulation study framework of the structure and dynamics of macromolecular systems mediated by microscopic molecular reactions. Till now, more than 80 peer-reviewed papers have been published on the journals like Science, Macromolecules, etc. He has undertaken 4 NSFC projects acting as the project leader, including a National Excellent Youth Fund of NSFC.</p>
+      <p style="text-align: justify;">Dr. Hong Liu&rsquo;s research interest focuses on the mesoscopic behavior of the reactive polymer systems, as well as the topological regulation of mechanical interlocked polymers. Dr. Liu had developed a coarse-grained simulation strategy coupled with the polymerization reaction model, which had been applied by others including international renowned scholars for many times. His work has established the multi-scale theoretical and simulation study framework of the structure and dynamics of macromolecular systems mediated by microscopic molecular reactions. Till now, more than 100 peer-reviewed papers have been published on the journals like Science, Macromolecules, etc. He has undertaken 4 NSFC projects acting as the project leader, including a National Excellent Youth Fund of NSFC.</p>
 
     </div>
     
@@ -1571,7 +1571,7 @@
       Mo Xie</span>, <span >
       Ji-Yuan Xing</span>, <span >
       Yao-Hong Xue</span>, <span >
-      Hong Liu</span>
+      Hong Liu*</span>
   </span>
   (2021).
   <a href="/publication/network-structure-and-propert-ies-of-crosslinked-bio-based/">Network structure and properties of crosslinked bio-based epoxy resin composite: An in-silico multiscale strategy with dynamic curing reaction process</a>.
