--- a/publication/in-depth-analysis-of-supramolecular/index.html
+++ b/publication/in-depth-analysis-of-supramolecular/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: April 17, 2024 --><html lang="en-us" >
+<!-- Last Published: April 18, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -759,7 +759,7 @@
   <span >
       Ji-Yuan Xing</span>, <span >
       Yao-Hong Xue</span>, <span >
-      Zhong-Yuan Lu</span>, <span >
+      Zhong-Yuan Lu*</span>, <span >
       Hong Liu*</span>
   </div>
   
